nvdimm: ndtest: Return -ENOMEM if devm_kcalloc() fails in ndtest_probe() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10964,6 +10964,7 @@
 	patches.kernel.org/6.12.53-241-KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if.patch
 	patches.kernel.org/6.12.53-242-fbdev-simplefb-Fix-use-after-free-in-simplefb.patch
 	patches.kernel.org/6.12.53-243-mm-hugetlb-avoid-soft-lockup-when-mprotect-to.patch
+	patches.kernel.org/6.12.53-244-nvdimm-ndtest-Return-ENOMEM-if-devm_kcalloc-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
