--- a/series.conf
+++ b/series.conf
@@ -10931,6 +10931,7 @@
 	patches.kernel.org/6.12.53-208-drivers-base-node-fix-double-free-in-register.patch
 	patches.kernel.org/6.12.53-209-mtd-rawnand-atmel-Fix-error-handling-path-in-.patch
 	patches.kernel.org/6.12.53-210-PCI-j721e-Fix-incorrect-error-message-in-prob.patch
+	patches.kernel.org/6.12.53-211-idpf-fix-mismatched-free-function-for-dma_all.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
