--- a/series.conf
+++ b/series.conf
@@ -10787,6 +10787,7 @@
 	patches.kernel.org/6.12.53-064-pwm-tiehrpwm-Make-code-comment-in-.free-more-.patch
 	patches.kernel.org/6.12.53-065-pwm-tiehrpwm-Fix-various-off-by-one-errors-in.patch
 	patches.kernel.org/6.12.53-066-pwm-tiehrpwm-Fix-corner-case-in-clock-divisor.patch
+	patches.kernel.org/6.12.53-067-ACPICA-Fix-largest-possible-resource-descript.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
