--- a/series.conf
+++ b/series.conf
@@ -10820,6 +10820,7 @@
 	patches.kernel.org/6.12.53-097-drm-amd-display-Remove-redundant-semicolons.patch
 	patches.kernel.org/6.12.53-098-crypto-keembay-Add-missing-check-after-sg_nen.patch
 	patches.kernel.org/6.12.53-099-hwrng-nomadik-add-ARM_AMBA-dependency.patch
+	patches.kernel.org/6.12.53-100-scsi-pm80xx-Fix-array-index-out-of-of-bounds-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
