dm vdo: return error on corrupted metadata in start_restoring_volume functions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10899,6 +10899,7 @@
 	patches.kernel.org/6.12.53-176-wifi-rtw89-avoid-circular-locking-dependency-.patch
 	patches.kernel.org/6.12.53-177-PCI-tegra194-Fix-duplicate-PLL-disable-in-pex.patch
 	patches.kernel.org/6.12.53-178-remoteproc-qcom-q6v5-Avoid-disabling-handover.patch
+	patches.kernel.org/6.12.53-179-dm-vdo-return-error-on-corrupted-metadata-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
