mfd: rz-mtu3: Fix MTU5 NFCR register offset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10952,6 +10952,7 @@
 	patches.kernel.org/6.12.53-229-ASoC-codecs-wcd937x-make-stub-functions-inlin.patch
 	patches.kernel.org/6.12.53-230-fs-udf-fix-OOB-read-in-lengthAllocDescs-handl.patch
 	patches.kernel.org/6.12.53-231-net-nfc-nci-Add-parameter-validation-for-pack.patch
+	patches.kernel.org/6.12.53-232-mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
