--- a/series.conf
+++ b/series.conf
@@ -10757,6 +10757,7 @@
 	patches.kernel.org/6.12.53-034-arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-.patch
 	patches.kernel.org/6.12.53-035-regulator-scmi-Use-int-type-to-store-negative.patch
 	patches.kernel.org/6.12.53-036-selftests-nolibc-fix-EXPECT_NZ-macro.patch
+	patches.kernel.org/6.12.53-037-leds-leds-lp55xx-Use-correct-address-for-memo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
