lsm: CONFIG_LSM can depend on CONFIG_SECURITY (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10734,6 +10734,7 @@
 	patches.kernel.org/6.12.53-011-smb-server-fix-IRD-ORD-negotiation-with-the-c.patch
 	patches.kernel.org/6.12.53-012-EDAC-i10nm-Skip-DIMM-enumeration-on-a-disable.patch
 	patches.kernel.org/6.12.53-013-x86-vdso-Fix-output-operand-size-of-RDPID.patch
+	patches.kernel.org/6.12.53-014-lsm-CONFIG_LSM-can-depend-on-CONFIG_SECURITY.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
