--- a/series.conf
+++ b/series.conf
@@ -10947,6 +10947,7 @@
 	patches.kernel.org/6.12.53-224-uio_hv_generic-Let-userspace-take-care-of-int.patch
 	patches.kernel.org/6.12.53-225-io_uring-waitid-always-prune-wait-queue-entry.patch
 	patches.kernel.org/6.12.53-226-ASoC-wcd934x-fix-error-handling-in-wcd934x_co.patch
+	patches.kernel.org/6.12.53-227-ASoC-SOF-ipc3-topology-Fix-multi-core-and-sta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
