usb: host: max3421-hcd: Fix error pointer dereference in probe cleanup (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10814,6 +10814,7 @@
 	patches.kernel.org/6.12.53-091-drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.kernel.org/6.12.53-092-media-zoran-Remove-zoran_fh-structure.patch
 	patches.kernel.org/6.12.53-093-phy-rockchip-naneng-combphy-Enable-U3-OTG-por.patch
+	patches.kernel.org/6.12.53-094-usb-host-max3421-hcd-Fix-error-pointer-derefe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
