crypto: hisilicon - re-enable address prefetch after device resuming (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10830,6 +10830,7 @@
 	patches.kernel.org/6.12.53-107-ALSA-lx_core-use-int-type-to-store-negative-e.patch
 	patches.kernel.org/6.12.53-108-media-st-delta-avoid-excessive-stack-usage.patch
 	patches.kernel.org/6.12.53-109-crypto-hisilicon-zip-remove-unnecessary-valid.patch
+	patches.kernel.org/6.12.53-110-crypto-hisilicon-re-enable-address-prefetch-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
