nfp: fix RSS hash key size when RSS is not supported (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10932,6 +10932,7 @@
 	patches.kernel.org/6.12.53-209-mtd-rawnand-atmel-Fix-error-handling-path-in-.patch
 	patches.kernel.org/6.12.53-210-PCI-j721e-Fix-incorrect-error-message-in-prob.patch
 	patches.kernel.org/6.12.53-211-idpf-fix-mismatched-free-function-for-dma_all.patch
+	patches.kernel.org/6.12.53-212-nfp-fix-RSS-hash-key-size-when-RSS-is-not-sup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
