--- a/series.conf
+++ b/series.conf
@@ -10828,6 +10828,7 @@
 	patches.kernel.org/6.12.53-105-RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-.patch
 	patches.kernel.org/6.12.53-106-PCI-ACPI-Fix-pci_acpi_preserve_config-memory-.patch
 	patches.kernel.org/6.12.53-107-ALSA-lx_core-use-int-type-to-store-negative-e.patch
+	patches.kernel.org/6.12.53-108-media-st-delta-avoid-excessive-stack-usage.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
