KEYS: X.509: Fix Basic Constraints CA flag parsing (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10925,6 +10925,7 @@
 	patches.kernel.org/6.12.53-202-Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.kernel.org/6.12.53-203-Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.kernel.org/6.12.53-204-Bluetooth-hci_sync-Fix-using-random-address-f.patch
+	patches.kernel.org/6.12.53-205-KEYS-X.509-Fix-Basic-Constraints-CA-flag-pars.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
