--- a/series.conf
+++ b/series.conf
@@ -10949,6 +10949,7 @@
 	patches.kernel.org/6.12.53-226-ASoC-wcd934x-fix-error-handling-in-wcd934x_co.patch
 	patches.kernel.org/6.12.53-227-ASoC-SOF-ipc3-topology-Fix-multi-core-and-sta.patch
 	patches.kernel.org/6.12.53-228-ASoC-codecs-wcd937x-set-the-comp-soundwire-po.patch
+	patches.kernel.org/6.12.53-229-ASoC-codecs-wcd937x-make-stub-functions-inlin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
