firmware: arm_scmi: Mark VirtIO ready before registering scmi_virtio_driver (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10745,6 +10745,7 @@
 	patches.kernel.org/6.12.53-022-ARM-dts-renesas-porter-Fix-CAN-pin-group.patch
 	patches.kernel.org/6.12.53-023-leds-flash-leds-qcom-flash-Update-torch-curre.patch
 	patches.kernel.org/6.12.53-024-cpufreq-scmi-Account-for-malformed-DT-in-scmi.patch
+	patches.kernel.org/6.12.53-025-firmware-arm_scmi-Mark-VirtIO-ready-before-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
