--- a/series.conf
+++ b/series.conf
@@ -10812,6 +10812,7 @@
 	patches.kernel.org/6.12.53-089-drm-radeon-r600_cs-clean-up-of-dead-code-in-r.patch
 	patches.kernel.org/6.12.53-090-f2fs-fix-condition-in-__allow_reserved_blocks.patch
 	patches.kernel.org/6.12.53-091-drm-bridge-it6505-select-REGMAP_I2C.patch
+	patches.kernel.org/6.12.53-092-media-zoran-Remove-zoran_fh-structure.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
