--- a/series.conf
+++ b/series.conf
@@ -10855,6 +10855,7 @@
 	patches.kernel.org/6.12.53-132-ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-in.patch
 	patches.kernel.org/6.12.53-133-ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-inp.patch
 	patches.kernel.org/6.12.53-134-ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-inp.patch
+	patches.kernel.org/6.12.53-135-drm-msm-dpu-fix-incorrect-type-for-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
