riscv, bpf: Sign extend struct ops return values properly (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10788,6 +10788,7 @@
 	patches.kernel.org/6.12.53-065-pwm-tiehrpwm-Fix-various-off-by-one-errors-in.patch
 	patches.kernel.org/6.12.53-066-pwm-tiehrpwm-Fix-corner-case-in-clock-divisor.patch
 	patches.kernel.org/6.12.53-067-ACPICA-Fix-largest-possible-resource-descript.patch
+	patches.kernel.org/6.12.53-068-riscv-bpf-Sign-extend-struct-ops-return-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
