--- a/series.conf
+++ b/series.conf
@@ -10875,6 +10875,7 @@
 	patches.kernel.org/6.12.53-152-ALSA-pcm-Disable-bottom-softirqs-as-part-of-s.patch
 	patches.kernel.org/6.12.53-153-ACPI-NFIT-Fix-incorrect-ndr_desc-being-report.patch
 	patches.kernel.org/6.12.53-154-scsi-qla2xxx-edif-Fix-incorrect-sign-of-error.patch
+	patches.kernel.org/6.12.53-155-scsi-qla2xxx-Fix-incorrect-sign-of-error-code.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
