f2fs: fix condition in __allow_reserved_blocks() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10810,6 +10810,7 @@
 	patches.kernel.org/6.12.53-087-bpf-Enforce-expected_attach_type-for-tailcall.patch
 	patches.kernel.org/6.12.53-088-drm-panel-novatek-nt35560-Fix-invalid-return-.patch
 	patches.kernel.org/6.12.53-089-drm-radeon-r600_cs-clean-up-of-dead-code-in-r.patch
+	patches.kernel.org/6.12.53-090-f2fs-fix-condition-in-__allow_reserved_blocks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
