--- a/series.conf
+++ b/series.conf
@@ -10879,6 +10879,7 @@
 	patches.kernel.org/6.12.53-156-scsi-qla2xxx-Fix-incorrect-sign-of-error-code.patch
 	patches.kernel.org/6.12.53-157-HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.kernel.org/6.12.53-158-f2fs-fix-zero-sized-extent-for-precache-exten.patch
+	patches.kernel.org/6.12.53-159-Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
