--- a/series.conf
+++ b/series.conf
@@ -10797,6 +10797,7 @@
 	patches.kernel.org/6.12.53-074-bpf-arm64-Call-bpf_jit_binary_pack_finalize-i.patch
 	patches.kernel.org/6.12.53-075-smp-Fix-up-and-expand-the-smp_call_function_m.patch
 	patches.kernel.org/6.12.53-076-tools-nolibc-make-time_t-robust-if-__kernel_o.patch
+	patches.kernel.org/6.12.53-077-spi-fix-return-code-when-spi-device-has-too-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
