--- a/series.conf
+++ b/series.conf
@@ -10731,6 +10731,7 @@
 	patches.kernel.org/6.12.53-008-uprobes-uprobe_warn-should-use-passed-task.patch
 	patches.kernel.org/6.12.53-009-coresight-trbe-Prevent-overflow-in-PERF_IDX2O.patch
 	patches.kernel.org/6.12.53-010-perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
+	patches.kernel.org/6.12.53-011-smb-server-fix-IRD-ORD-negotiation-with-the-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
