firmware: firmware: meson-sm: fix compile-test default (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10773,6 +10773,7 @@
 	patches.kernel.org/6.12.53-050-arm64-dts-mediatek-mt8195-Remove-suspend-brea.patch
 	patches.kernel.org/6.12.53-051-nbd-restrict-sockets-to-TCP-and-UDP.patch
 	patches.kernel.org/6.12.53-052-PM-devfreq-rockchip-dfi-double-count-on-RK358.patch
+	patches.kernel.org/6.12.53-053-firmware-firmware-meson-sm-fix-compile-test-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
