smb: client: fix crypto buffers in non-linear memory (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10938,6 +10938,7 @@
 	patches.kernel.org/6.12.53-215-net-mlx5-Stop-polling-for-command-response-if.patch
 	patches.kernel.org/6.12.53-216-net-mlx5-pagealloc-Fix-reclaim-race-during-co.patch
 	patches.kernel.org/6.12.53-217-net-mlx5-fw-reset-add-reset-timeout-work.patch
+	patches.kernel.org/6.12.53-218-smb-client-fix-crypto-buffers-in-non-linear-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
