--- a/series.conf
+++ b/series.conf
@@ -10793,6 +10793,7 @@
 	patches.kernel.org/6.12.53-070-i3c-master-svc-Use-manual-response-for-IBI-ev.patch
 	patches.kernel.org/6.12.53-071-i3c-master-svc-Recycle-unused-IBI-slot.patch
 	patches.kernel.org/6.12.53-072-selftests-watchdog-skip-ping-loop-if-WDIOF_KE.patch
+	patches.kernel.org/6.12.53-073-bpf-Explicitly-check-accesses-to-bpf_sock_add.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
