--- a/series.conf
+++ b/series.conf
@@ -10729,6 +10729,7 @@
 	patches.kernel.org/6.12.53-006-powerpc-8xx-Remove-left-over-instruction-and-.patch
 	patches.kernel.org/6.12.53-007-powerpc-603-Really-copy-kernel-PGD-entries-in.patch
 	patches.kernel.org/6.12.53-008-uprobes-uprobe_warn-should-use-passed-task.patch
+	patches.kernel.org/6.12.53-009-coresight-trbe-Prevent-overflow-in-PERF_IDX2O.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
