soc: mediatek: mtk-svs: fix device leaks on mt8192 probe failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10775,6 +10775,7 @@
 	patches.kernel.org/6.12.53-052-PM-devfreq-rockchip-dfi-double-count-on-RK358.patch
 	patches.kernel.org/6.12.53-053-firmware-firmware-meson-sm-fix-compile-test-d.patch
 	patches.kernel.org/6.12.53-054-soc-mediatek-mtk-svs-fix-device-leaks-on-mt81.patch
+	patches.kernel.org/6.12.53-055-soc-mediatek-mtk-svs-fix-device-leaks-on-mt81.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
