--- a/series.conf
+++ b/series.conf
@@ -10849,6 +10849,7 @@
 	patches.kernel.org/6.12.53-126-usb-gadget-configfs-Correctly-set-use_os_stri.patch
 	patches.kernel.org/6.12.53-127-tty-n_gsm-Don-t-block-input-queue-by-waiting-.patch
 	patches.kernel.org/6.12.53-128-misc-genwqe-Fix-incorrect-cmd-field-being-rep.patch
+	patches.kernel.org/6.12.53-129-pps-fix-warning-in-pps_register_cdev-when-reg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
