--- a/series.conf
+++ b/series.conf
@@ -10776,6 +10776,7 @@
 	patches.kernel.org/6.12.53-053-firmware-firmware-meson-sm-fix-compile-test-d.patch
 	patches.kernel.org/6.12.53-054-soc-mediatek-mtk-svs-fix-device-leaks-on-mt81.patch
 	patches.kernel.org/6.12.53-055-soc-mediatek-mtk-svs-fix-device-leaks-on-mt81.patch
+	patches.kernel.org/6.12.53-056-cpuidle-qcom-spm-fix-device-and-OF-node-leaks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
