--- a/series.conf
+++ b/series.conf
@@ -10935,6 +10935,7 @@
 	patches.kernel.org/6.12.53-212-nfp-fix-RSS-hash-key-size-when-RSS-is-not-sup.patch
 	patches.kernel.org/6.12.53-213-net-ena-return-0-in-ena_get_rxfh_key_size-whe.patch
 	patches.kernel.org/6.12.53-214-net-dlink-handle-copy_thresh-allocation-failu.patch
+	patches.kernel.org/6.12.53-215-net-mlx5-Stop-polling-for-command-response-if.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
