net: usb: Remove disruptive netif_wake_queue in rtl8150_set_multicast (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10917,6 +10917,7 @@
 	patches.kernel.org/6.12.53-194-PCI-rcar-gen4-Fix-inverted-break-condition-in.patch
 	patches.kernel.org/6.12.53-195-iommu-vt-d-Disallow-dirty-tracking-if-incoher.patch
 	patches.kernel.org/6.12.53-196-RDMA-siw-Always-report-immediate-post-SQ-erro.patch
+	patches.kernel.org/6.12.53-197-net-usb-Remove-disruptive-netif_wake_queue-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
