usb: cdns3: cdnsp-pci: remove redundant pci_disable_device() call (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10980,6 +10980,7 @@
 	patches.kernel.org/6.12.53-257-net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MD.patch
 	patches.kernel.org/6.12.53-258-usb-typec-tipd-Clear-interrupts-first.patch
 	patches.kernel.org/6.12.53-259-arm64-dts-qcom-qcm2290-Disable-USB-SS-bus-ins.patch
+	patches.kernel.org/6.12.53-260-usb-cdns3-cdnsp-pci-remove-redundant-pci_disa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
