--- a/series.conf
+++ b/series.conf
@@ -10877,6 +10877,7 @@
 	patches.kernel.org/6.12.53-154-scsi-qla2xxx-edif-Fix-incorrect-sign-of-error.patch
 	patches.kernel.org/6.12.53-155-scsi-qla2xxx-Fix-incorrect-sign-of-error-code.patch
 	patches.kernel.org/6.12.53-156-scsi-qla2xxx-Fix-incorrect-sign-of-error-code.patch
+	patches.kernel.org/6.12.53-157-HID-hidraw-tighten-ioctl-command-parsing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
