selftests: vDSO: vdso_test_abi: Correctly skip whole test with missing vDSO (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10769,6 +10769,7 @@
 	patches.kernel.org/6.12.53-046-pinctrl-renesas-Use-int-type-to-store-negativ.patch
 	patches.kernel.org/6.12.53-047-null_blk-Fix-the-description-of-the-cache_siz.patch
 	patches.kernel.org/6.12.53-048-selftests-vDSO-Fix-Wunitialized-in-powerpc-VD.patch
+	patches.kernel.org/6.12.53-049-selftests-vDSO-vdso_test_abi-Correctly-skip-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
