--- a/series.conf
+++ b/series.conf
@@ -10744,6 +10744,7 @@
 	patches.kernel.org/6.12.53-021-libbpf-Fix-reuse-of-DEVMAP.patch
 	patches.kernel.org/6.12.53-022-ARM-dts-renesas-porter-Fix-CAN-pin-group.patch
 	patches.kernel.org/6.12.53-023-leds-flash-leds-qcom-flash-Update-torch-curre.patch
+	patches.kernel.org/6.12.53-024-cpufreq-scmi-Account-for-malformed-DT-in-scmi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
