coresight: Fix incorrect handling for return value of devm_kzalloc (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10906,6 +10906,7 @@
 	patches.kernel.org/6.12.53-183-coresight-etm4x-Support-atclk.patch
 	patches.kernel.org/6.12.53-184-coresight-trbe-Return-NULL-pointer-for-alloca.patch
 	patches.kernel.org/6.12.53-185-coresight-tpda-fix-the-logic-to-setup-the-ele.patch
+	patches.kernel.org/6.12.53-186-coresight-Fix-incorrect-handling-for-return-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
