bpf: Reject negative offsets for ALU ops (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10941,6 +10941,7 @@
 	patches.kernel.org/6.12.53-218-smb-client-fix-crypto-buffers-in-non-linear-m.patch
 	patches.kernel.org/6.12.53-219-Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon.patch
 	patches.kernel.org/6.12.53-220-vhost-vringh-Modify-the-return-value-check.patch
+	patches.kernel.org/6.12.53-221-bpf-Reject-negative-offsets-for-ALU-ops.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
