--- a/series.conf
+++ b/series.conf
@@ -10919,6 +10919,7 @@
 	patches.kernel.org/6.12.53-196-RDMA-siw-Always-report-immediate-post-SQ-erro.patch
 	patches.kernel.org/6.12.53-197-net-usb-Remove-disruptive-netif_wake_queue-in.patch
 	patches.kernel.org/6.12.53-198-ptp-Add-a-upper-bound-on-max_vclocks.patch
+	patches.kernel.org/6.12.53-199-vhost-vringh-Fix-copy_to_iter-return-value-ch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
