RDMA/mlx5: Better estimate max_qp_wr to reflect WQE count (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10824,6 +10824,7 @@
 	patches.kernel.org/6.12.53-101-scsi-myrs-Fix-dma_alloc_coherent-error-check.patch
 	patches.kernel.org/6.12.53-102-crypto-octeontx2-Call-strscpy-with-correct-si.patch
 	patches.kernel.org/6.12.53-103-media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
+	patches.kernel.org/6.12.53-104-RDMA-mlx5-Better-estimate-max_qp_wr-to-reflec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
