--- a/series.conf
+++ b/series.conf
@@ -10771,6 +10771,7 @@
 	patches.kernel.org/6.12.53-048-selftests-vDSO-Fix-Wunitialized-in-powerpc-VD.patch
 	patches.kernel.org/6.12.53-049-selftests-vDSO-vdso_test_abi-Correctly-skip-w.patch
 	patches.kernel.org/6.12.53-050-arm64-dts-mediatek-mt8195-Remove-suspend-brea.patch
+	patches.kernel.org/6.12.53-051-nbd-restrict-sockets-to-TCP-and-UDP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
