--- a/series.conf
+++ b/series.conf
@@ -10870,6 +10870,7 @@
 	patches.kernel.org/6.12.53-147-wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-.patch
 	patches.kernel.org/6.12.53-148-wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
 	patches.kernel.org/6.12.53-149-f2fs-fix-to-update-map-m_next_extent-correctl.patch
+	patches.kernel.org/6.12.53-150-f2fs-fix-to-truncate-first-page-in-error-path.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
