coresight: Only register perf symlink for sinks with alloc_buffer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10833,6 +10833,7 @@
 	patches.kernel.org/6.12.53-110-crypto-hisilicon-re-enable-address-prefetch-a.patch
 	patches.kernel.org/6.12.53-111-crypto-hisilicon-qm-check-whether-the-input-f.patch
 	patches.kernel.org/6.12.53-112-inet-ping-check-sock_net-in-ping_get_port-and.patch
+	patches.kernel.org/6.12.53-113-coresight-Only-register-perf-symlink-for-sink.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
