--- a/series.conf
+++ b/series.conf
@@ -10967,6 +10967,7 @@
 	patches.kernel.org/6.12.53-244-nvdimm-ndtest-Return-ENOMEM-if-devm_kcalloc-f.patch
 	patches.kernel.org/6.12.53-245-misc-fastrpc-Save-actual-DMA-size-in-fastrpc_.patch
 	patches.kernel.org/6.12.53-246-misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
+	patches.kernel.org/6.12.53-247-misc-fastrpc-fix-possible-map-leak-in-fastrpc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
