sparc: fix accurate exception reporting in copy_{from,to}_user for M7 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10892,6 +10892,7 @@
 	patches.kernel.org/6.12.53-169-sparc-fix-accurate-exception-reporting-in-cop.patch
 	patches.kernel.org/6.12.53-170-sparc-fix-accurate-exception-reporting-in-cop.patch
 	patches.kernel.org/6.12.53-171-sparc-fix-accurate-exception-reporting-in-cop.patch
+	patches.kernel.org/6.12.53-172-sparc-fix-accurate-exception-reporting-in-cop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
