--- a/series.conf
+++ b/series.conf
@@ -10972,6 +10972,7 @@
 	patches.kernel.org/6.12.53-249-Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
 	patches.kernel.org/6.12.53-250-Input-uinput-zero-initialize-uinput_ff_upload.patch
 	patches.kernel.org/6.12.53-251-sunrpc-fix-null-pointer-dereference-on-zero-l.patch
+	patches.kernel.org/6.12.53-252-remoteproc-pru-Fix-potential-NULL-pointer-der.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
