--- a/series.conf
+++ b/series.conf
@@ -10885,6 +10885,7 @@
 	patches.kernel.org/6.12.53-162-Documentation-trace-historgram-design-Separat.patch
 	patches.kernel.org/6.12.53-163-wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.kernel.org/6.12.53-164-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
+	patches.kernel.org/6.12.53-165-iommu-vt-d-debugfs-Fix-legacy-mode-page-table.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
