PCI: tegra: Fix devm_kcalloc() argument order for port->phys allocation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10842,6 +10842,7 @@
 	patches.kernel.org/6.12.53-119-drm-amd-pm-Disable-MCLK-switching-with-non-DC.patch
 	patches.kernel.org/6.12.53-120-drm-amd-pm-Disable-SCLK-switching-on-Oland-wi.patch
 	patches.kernel.org/6.12.53-121-wifi-mwifiex-send-world-regulatory-domain-to-.patch
+	patches.kernel.org/6.12.53-122-PCI-tegra-Fix-devm_kcalloc-argument-order-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
