--- a/series.conf
+++ b/series.conf
@@ -10795,6 +10795,7 @@
 	patches.kernel.org/6.12.53-072-selftests-watchdog-skip-ping-loop-if-WDIOF_KE.patch
 	patches.kernel.org/6.12.53-073-bpf-Explicitly-check-accesses-to-bpf_sock_add.patch
 	patches.kernel.org/6.12.53-074-bpf-arm64-Call-bpf_jit_binary_pack_finalize-i.patch
+	patches.kernel.org/6.12.53-075-smp-Fix-up-and-expand-the-smp_call_function_m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
