--- a/series.conf
+++ b/series.conf
@@ -10893,6 +10893,7 @@
 	patches.kernel.org/6.12.53-170-sparc-fix-accurate-exception-reporting-in-cop.patch
 	patches.kernel.org/6.12.53-171-sparc-fix-accurate-exception-reporting-in-cop.patch
 	patches.kernel.org/6.12.53-172-sparc-fix-accurate-exception-reporting-in-cop.patch
+	patches.kernel.org/6.12.53-173-vfio-pds-replace-bitmap_free-with-vfree.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
