--- a/series.conf
+++ b/series.conf
@@ -10979,6 +10979,7 @@
 	patches.kernel.org/6.12.53-256-net-9p-Fix-buffer-overflow-in-USB-transport-l.patch
 	patches.kernel.org/6.12.53-257-net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MD.patch
 	patches.kernel.org/6.12.53-258-usb-typec-tipd-Clear-interrupts-first.patch
+	patches.kernel.org/6.12.53-259-arm64-dts-qcom-qcm2290-Disable-USB-SS-bus-ins.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
