coresight: catu: Support atclk (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10902,6 +10902,7 @@
 	patches.kernel.org/6.12.53-179-dm-vdo-return-error-on-corrupted-metadata-in-.patch
 	patches.kernel.org/6.12.53-180-coresight-etm4x-Conditionally-access-register.patch
 	patches.kernel.org/6.12.53-181-coresight-tmc-Support-atclk.patch
+	patches.kernel.org/6.12.53-182-coresight-catu-Support-atclk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
