--- a/series.conf
+++ b/series.conf
@@ -10748,6 +10748,7 @@
 	patches.kernel.org/6.12.53-025-firmware-arm_scmi-Mark-VirtIO-ready-before-re.patch
 	patches.kernel.org/6.12.53-026-arm64-dts-imx93-kontron-Fix-GPIO-for-panel-re.patch
 	patches.kernel.org/6.12.53-027-arm64-dts-imx93-kontron-Fix-USB-port-assignme.patch
+	patches.kernel.org/6.12.53-028-arm64-dts-imx95-Correct-the-lpuart7-and-lpuar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
