--- a/series.conf
+++ b/series.conf
@@ -10928,6 +10928,7 @@
 	patches.kernel.org/6.12.53-205-KEYS-X.509-Fix-Basic-Constraints-CA-flag-pars.patch
 	patches.kernel.org/6.12.53-206-hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng.patch
 	patches.kernel.org/6.12.53-207-ocfs2-fix-double-free-in-user_cluster_connect.patch
+	patches.kernel.org/6.12.53-208-drivers-base-node-fix-double-free-in-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
