iio: consumers: Fix offset handling in iio_convert_raw_to_processed() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10859,6 +10859,7 @@
 	patches.kernel.org/6.12.53-136-fs-ntfs3-Fix-integer-overflow-in-run_unpack.patch
 	patches.kernel.org/6.12.53-137-fs-ntfs3-reject-index-allocation-if-BITMAP-is.patch
 	patches.kernel.org/6.12.53-138-iio-consumers-Fix-handling-of-negative-channe.patch
+	patches.kernel.org/6.12.53-139-iio-consumers-Fix-offset-handling-in-iio_conv.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
