net: dlink: handle copy_thresh allocation failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10934,6 +10934,7 @@
 	patches.kernel.org/6.12.53-211-idpf-fix-mismatched-free-function-for-dma_all.patch
 	patches.kernel.org/6.12.53-212-nfp-fix-RSS-hash-key-size-when-RSS-is-not-sup.patch
 	patches.kernel.org/6.12.53-213-net-ena-return-0-in-ena_get_rxfh_key_size-whe.patch
+	patches.kernel.org/6.12.53-214-net-dlink-handle-copy_thresh-allocation-failu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
