--- a/series.conf
+++ b/series.conf
@@ -10781,6 +10781,7 @@
 	patches.kernel.org/6.12.53-058-arm64-dts-mediatek-mt6331-Fix-pmic-regulators.patch
 	patches.kernel.org/6.12.53-059-mmc-core-Fix-variable-shadowing-in-mmc_route_.patch
 	patches.kernel.org/6.12.53-060-arm64-dts-mediatek-mt6795-xperia-m5-Fix-mmc0-.patch
+	patches.kernel.org/6.12.53-061-arm64-dts-mediatek-mt8395-kontron-i1200-Fix-M.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
