--- a/series.conf
+++ b/series.conf
@@ -10726,6 +10726,7 @@
 	patches.kernel.org/6.12.53-003-seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if.patch
 	patches.kernel.org/6.12.53-004-selftests-arm64-Check-fread-return-value-in-e.patch
 	patches.kernel.org/6.12.53-005-gfs2-Fix-GLF_INVALIDATE_IN_PROGRESS-flag-clea.patch
+	patches.kernel.org/6.12.53-006-powerpc-8xx-Remove-left-over-instruction-and-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
