drm/radeon/r600_cs: clean up of dead code in r600_cs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10809,6 +10809,7 @@
 	patches.kernel.org/6.12.53-086-libbpf-Fix-error-when-st-prefix_ops-and-ops-f.patch
 	patches.kernel.org/6.12.53-087-bpf-Enforce-expected_attach_type-for-tailcall.patch
 	patches.kernel.org/6.12.53-088-drm-panel-novatek-nt35560-Fix-invalid-return-.patch
+	patches.kernel.org/6.12.53-089-drm-radeon-r600_cs-clean-up-of-dead-code-in-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
