--- a/series.conf
+++ b/series.conf
@@ -10823,6 +10823,7 @@
 	patches.kernel.org/6.12.53-100-scsi-pm80xx-Fix-array-index-out-of-of-bounds-.patch
 	patches.kernel.org/6.12.53-101-scsi-myrs-Fix-dma_alloc_coherent-error-check.patch
 	patches.kernel.org/6.12.53-102-crypto-octeontx2-Call-strscpy-with-correct-si.patch
+	patches.kernel.org/6.12.53-103-media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
