ksmbd: Fix race condition in RPC handle list access (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10957,6 +10957,7 @@
 	patches.kernel.org/6.12.53-234-dm-fix-queue-start-stop-imbalance-under-suspe.patch
 	patches.kernel.org/6.12.53-235-dm-fix-NULL-pointer-dereference-in-__dm_suspe.patch
 	patches.kernel.org/6.12.53-236-LoongArch-Automatically-disable-kaslr-if-boot.patch
+	patches.kernel.org/6.12.53-237-ksmbd-Fix-race-condition-in-RPC-handle-list-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
