--- a/series.conf
+++ b/series.conf
@@ -10908,6 +10908,7 @@
 	patches.kernel.org/6.12.53-185-coresight-tpda-fix-the-logic-to-setup-the-ele.patch
 	patches.kernel.org/6.12.53-186-coresight-Fix-incorrect-handling-for-return-v.patch
 	patches.kernel.org/6.12.53-187-NFSv4.1-fix-backchannel-max_resp_sz-verificat.patch
+	patches.kernel.org/6.12.53-188-ipvs-Defer-ip_vs_ftp-unregister-during-netns-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
