selftests/nolibc: fix EXPECT_NZ macro (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10756,6 +10756,7 @@
 	patches.kernel.org/6.12.53-033-ARM-at91-pm-fix-MCKx-restore-routine.patch
 	patches.kernel.org/6.12.53-034-arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-.patch
 	patches.kernel.org/6.12.53-035-regulator-scmi-Use-int-type-to-store-negative.patch
+	patches.kernel.org/6.12.53-036-selftests-nolibc-fix-EXPECT_NZ-macro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
