ASoC: wcd934x: fix error handling in wcd934x_codec_parse_data() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10946,6 +10946,7 @@
 	patches.kernel.org/6.12.53-223-Squashfs-fix-uninit-value-in-squashfs_get_par.patch
 	patches.kernel.org/6.12.53-224-uio_hv_generic-Let-userspace-take-care-of-int.patch
 	patches.kernel.org/6.12.53-225-io_uring-waitid-always-prune-wait-queue-entry.patch
+	patches.kernel.org/6.12.53-226-ASoC-wcd934x-fix-error-handling-in-wcd934x_co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
