--- a/series.conf
+++ b/series.conf
@@ -10944,6 +10944,7 @@
 	patches.kernel.org/6.12.53-221-bpf-Reject-negative-offsets-for-ALU-ops.patch
 	patches.kernel.org/6.12.53-222-tpm-Disable-TPM2_TCG_HMAC-by-default.patch
 	patches.kernel.org/6.12.53-223-Squashfs-fix-uninit-value-in-squashfs_get_par.patch
+	patches.kernel.org/6.12.53-224-uio_hv_generic-Let-userspace-take-care-of-int.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
