sparc: fix accurate exception reporting in copy_{from_to}_user for UltraSPARC (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10888,6 +10888,7 @@
 	patches.kernel.org/6.12.53-165-iommu-vt-d-debugfs-Fix-legacy-mode-page-table.patch
 	patches.kernel.org/6.12.53-166-wifi-mac80211-fix-Rx-packet-handling-when-pub.patch
 	patches.kernel.org/6.12.53-167-ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_s.patch
+	patches.kernel.org/6.12.53-168-sparc-fix-accurate-exception-reporting-in-cop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
