init: INITRAMFS_PRESERVE_MTIME should depend on BLK_DEV_INITRD (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10722,6 +10722,7 @@
 	patches.kernel.org/6.12.52-035-KVM-x86-Don-t-re-check-L1-intercepts-when-com.patch
 	patches.kernel.org/6.12.52-036-Linux-6.12.52.patch
 	patches.kernel.org/6.12.53-001-filelock-add-FL_RECLAIM-to-show_fl_flags-macr.patch
+	patches.kernel.org/6.12.53-002-init-INITRAMFS_PRESERVE_MTIME-should-depend-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
