--- a/series.conf
+++ b/series.conf
@@ -10936,6 +10936,7 @@
 	patches.kernel.org/6.12.53-213-net-ena-return-0-in-ena_get_rxfh_key_size-whe.patch
 	patches.kernel.org/6.12.53-214-net-dlink-handle-copy_thresh-allocation-failu.patch
 	patches.kernel.org/6.12.53-215-net-mlx5-Stop-polling-for-command-response-if.patch
+	patches.kernel.org/6.12.53-216-net-mlx5-pagealloc-Fix-reclaim-race-during-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
