net: usb: asix: hold PM usage ref to avoid PM/MDIO + RTNL deadlock (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10977,6 +10977,7 @@
 	patches.kernel.org/6.12.53-254-pinctrl-check-the-return-value-of-pinmux_ops-.patch
 	patches.kernel.org/6.12.53-255-bus-fsl-mc-Check-return-value-of-platform_get.patch
 	patches.kernel.org/6.12.53-256-net-9p-Fix-buffer-overflow-in-USB-transport-l.patch
+	patches.kernel.org/6.12.53-257-net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MD.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
