drm/amdkfd: Fix error code sign for EINVAL in svm_ioctl() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10844,6 +10844,7 @@
 	patches.kernel.org/6.12.53-121-wifi-mwifiex-send-world-regulatory-domain-to-.patch
 	patches.kernel.org/6.12.53-122-PCI-tegra-Fix-devm_kcalloc-argument-order-for.patch
 	patches.kernel.org/6.12.53-123-tcp-fix-__tcp_close-to-only-send-RST-when-req.patch
+	patches.kernel.org/6.12.53-124-drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
