i2c: designware: Add disabling clocks when probe fails (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10805,6 +10805,7 @@
 	patches.kernel.org/6.12.53-082-thermal-drivers-qcom-lmh-Add-missing-IRQ-incl.patch
 	patches.kernel.org/6.12.53-083-i2c-mediatek-fix-potential-incorrect-use-of-I.patch
 	patches.kernel.org/6.12.53-084-i2c-designware-Fix-clock-issue-when-PM-is-dis.patch
+	patches.kernel.org/6.12.53-085-i2c-designware-Add-disabling-clocks-when-prob.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
