pwm: tiehrpwm: Fix various off-by-one errors in duty-cycle calculation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10785,6 +10785,7 @@
 	patches.kernel.org/6.12.53-062-arm64-dts-mediatek-mt8516-pumpkin-Fix-machine.patch
 	patches.kernel.org/6.12.53-063-pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-.patch
 	patches.kernel.org/6.12.53-064-pwm-tiehrpwm-Make-code-comment-in-.free-more-.patch
+	patches.kernel.org/6.12.53-065-pwm-tiehrpwm-Fix-various-off-by-one-errors-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
