gfs2: Fix GLF_INVALIDATE_IN_PROGRESS flag clearing in do_xmote (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10725,6 +10725,7 @@
 	patches.kernel.org/6.12.53-002-init-INITRAMFS_PRESERVE_MTIME-should-depend-o.patch
 	patches.kernel.org/6.12.53-003-seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if.patch
 	patches.kernel.org/6.12.53-004-selftests-arm64-Check-fread-return-value-in-e.patch
+	patches.kernel.org/6.12.53-005-gfs2-Fix-GLF_INVALIDATE_IN_PROGRESS-flag-clea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
