dm: fix NULL pointer dereference in __dm_suspend() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10955,6 +10955,7 @@
 	patches.kernel.org/6.12.53-232-mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.kernel.org/6.12.53-233-mfd-vexpress-sysreg-Check-the-return-value-of.patch
 	patches.kernel.org/6.12.53-234-dm-fix-queue-start-stop-imbalance-under-suspe.patch
+	patches.kernel.org/6.12.53-235-dm-fix-NULL-pointer-dereference-in-__dm_suspe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
