i2c: designware: Fix clock issue when PM is disabled (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10804,6 +10804,7 @@
 	patches.kernel.org/6.12.53-081-thermal-drivers-qcom-Make-LMH-select-QCOM_SCM.patch
 	patches.kernel.org/6.12.53-082-thermal-drivers-qcom-lmh-Add-missing-IRQ-incl.patch
 	patches.kernel.org/6.12.53-083-i2c-mediatek-fix-potential-incorrect-use-of-I.patch
+	patches.kernel.org/6.12.53-084-i2c-designware-Fix-clock-issue-when-PM-is-dis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
