--- a/series.conf
+++ b/series.conf
@@ -10916,6 +10916,7 @@
 	patches.kernel.org/6.12.53-193-PCI-rcar-gen4-Assure-reset-occurs-before-DBI-.patch
 	patches.kernel.org/6.12.53-194-PCI-rcar-gen4-Fix-inverted-break-condition-in.patch
 	patches.kernel.org/6.12.53-195-iommu-vt-d-Disallow-dirty-tracking-if-incoher.patch
+	patches.kernel.org/6.12.53-196-RDMA-siw-Always-report-immediate-post-SQ-erro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
