--- a/series.conf
+++ b/series.conf
@@ -10880,6 +10880,7 @@
 	patches.kernel.org/6.12.53-157-HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.kernel.org/6.12.53-158-f2fs-fix-zero-sized-extent-for-precache-exten.patch
 	patches.kernel.org/6.12.53-159-Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loo.patch
+	patches.kernel.org/6.12.53-160-RDMA-core-Resolve-MAC-of-next-hop-device-with.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
