--- a/series.conf
+++ b/series.conf
@@ -10743,6 +10743,7 @@
 	patches.kernel.org/6.12.53-020-bpf-Remove-migrate_disable-in-kprobe_multi_li.patch
 	patches.kernel.org/6.12.53-021-libbpf-Fix-reuse-of-DEVMAP.patch
 	patches.kernel.org/6.12.53-022-ARM-dts-renesas-porter-Fix-CAN-pin-group.patch
+	patches.kernel.org/6.12.53-023-leds-flash-leds-qcom-flash-Update-torch-curre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
