netfilter: ipset: Remove unused htable_bits in macro ahash_region (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10860,6 +10860,7 @@
 	patches.kernel.org/6.12.53-137-fs-ntfs3-reject-index-allocation-if-BITMAP-is.patch
 	patches.kernel.org/6.12.53-138-iio-consumers-Fix-handling-of-negative-channe.patch
 	patches.kernel.org/6.12.53-139-iio-consumers-Fix-offset-handling-in-iio_conv.patch
+	patches.kernel.org/6.12.53-140-netfilter-ipset-Remove-unused-htable_bits-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
