arm64: dts: mediatek: mt6331: Fix pmic, regulators, rtc, keys node names (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10778,6 +10778,7 @@
 	patches.kernel.org/6.12.53-055-soc-mediatek-mtk-svs-fix-device-leaks-on-mt81.patch
 	patches.kernel.org/6.12.53-056-cpuidle-qcom-spm-fix-device-and-OF-node-leaks.patch
 	patches.kernel.org/6.12.53-057-arm64-dts-mediatek-mt8186-tentacruel-Fix-touc.patch
+	patches.kernel.org/6.12.53-058-arm64-dts-mediatek-mt6331-Fix-pmic-regulators.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
