coresight: etm4x: Support atclk (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10903,6 +10903,7 @@
 	patches.kernel.org/6.12.53-180-coresight-etm4x-Conditionally-access-register.patch
 	patches.kernel.org/6.12.53-181-coresight-tmc-Support-atclk.patch
 	patches.kernel.org/6.12.53-182-coresight-catu-Support-atclk.patch
+	patches.kernel.org/6.12.53-183-coresight-etm4x-Support-atclk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
