--- a/series.conf
+++ b/series.conf
@@ -10971,6 +10971,7 @@
 	patches.kernel.org/6.12.53-248-misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.kernel.org/6.12.53-249-Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
 	patches.kernel.org/6.12.53-250-Input-uinput-zero-initialize-uinput_ff_upload.patch
+	patches.kernel.org/6.12.53-251-sunrpc-fix-null-pointer-dereference-on-zero-l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
