drivers/base/node: handle error properly in register_one_node() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10863,6 +10863,7 @@
 	patches.kernel.org/6.12.53-140-netfilter-ipset-Remove-unused-htable_bits-in-.patch
 	patches.kernel.org/6.12.53-141-ipvs-Use-READ_ONCE-WRITE_ONCE-for-ipvs-enable.patch
 	patches.kernel.org/6.12.53-142-watchdog-mpc8xxx_wdt-Reload-the-watchdog-time.patch
+	patches.kernel.org/6.12.53-143-drivers-base-node-handle-error-properly-in-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
