--- a/series.conf
+++ b/series.conf
@@ -10950,6 +10950,7 @@
 	patches.kernel.org/6.12.53-227-ASoC-SOF-ipc3-topology-Fix-multi-core-and-sta.patch
 	patches.kernel.org/6.12.53-228-ASoC-codecs-wcd937x-set-the-comp-soundwire-po.patch
 	patches.kernel.org/6.12.53-229-ASoC-codecs-wcd937x-make-stub-functions-inlin.patch
+	patches.kernel.org/6.12.53-230-fs-udf-fix-OOB-read-in-lengthAllocDescs-handl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
