--- a/series.conf
+++ b/series.conf
@@ -10765,6 +10765,7 @@
 	patches.kernel.org/6.12.53-042-ARM-dts-ti-omap-omap3-devkit8000-lcd-Fix-ti-k.patch
 	patches.kernel.org/6.12.53-043-ARM-dts-omap-am335x-cm-t335-Remove-unused-mca.patch
 	patches.kernel.org/6.12.53-044-PM-devfreq-mtk-cci-Fix-potential-error-pointe.patch
+	patches.kernel.org/6.12.53-045-power-supply-cw2015-Fix-a-alignment-coding-st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
