--- a/series.conf
+++ b/series.conf
@@ -10895,6 +10895,7 @@
 	patches.kernel.org/6.12.53-172-sparc-fix-accurate-exception-reporting-in-cop.patch
 	patches.kernel.org/6.12.53-173-vfio-pds-replace-bitmap_free-with-vfree.patch
 	patches.kernel.org/6.12.53-174-crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_d.patch
+	patches.kernel.org/6.12.53-175-RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
