--- a/series.conf
+++ b/series.conf
@@ -10927,6 +10927,7 @@
 	patches.kernel.org/6.12.53-204-Bluetooth-hci_sync-Fix-using-random-address-f.patch
 	patches.kernel.org/6.12.53-205-KEYS-X.509-Fix-Basic-Constraints-CA-flag-pars.patch
 	patches.kernel.org/6.12.53-206-hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng.patch
+	patches.kernel.org/6.12.53-207-ocfs2-fix-double-free-in-user_cluster_connect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
