--- a/series.conf
+++ b/series.conf
@@ -10800,6 +10800,7 @@
 	patches.kernel.org/6.12.53-077-spi-fix-return-code-when-spi-device-has-too-m.patch
 	patches.kernel.org/6.12.53-078-bpf-Mark-kfuncs-as-__noclone.patch
 	patches.kernel.org/6.12.53-079-once-fix-race-by-moving-DO_ONCE-to-separate-s.patch
+	patches.kernel.org/6.12.53-080-hwmon-mlxreg-fan-Separate-methods-of-fan-sett.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
