--- a/series.conf
+++ b/series.conf
@@ -10889,6 +10889,7 @@
 	patches.kernel.org/6.12.53-166-wifi-mac80211-fix-Rx-packet-handling-when-pub.patch
 	patches.kernel.org/6.12.53-167-ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_s.patch
 	patches.kernel.org/6.12.53-168-sparc-fix-accurate-exception-reporting-in-cop.patch
+	patches.kernel.org/6.12.53-169-sparc-fix-accurate-exception-reporting-in-cop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
