inet: ping: check sock_net() in ping_get_port() and ping_lookup() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10832,6 +10832,7 @@
 	patches.kernel.org/6.12.53-109-crypto-hisilicon-zip-remove-unnecessary-valid.patch
 	patches.kernel.org/6.12.53-110-crypto-hisilicon-re-enable-address-prefetch-a.patch
 	patches.kernel.org/6.12.53-111-crypto-hisilicon-qm-check-whether-the-input-f.patch
+	patches.kernel.org/6.12.53-112-inet-ping-check-sock_net-in-ping_get_port-and.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
