--- a/series.conf
+++ b/series.conf
@@ -10956,6 +10956,7 @@
 	patches.kernel.org/6.12.53-233-mfd-vexpress-sysreg-Check-the-return-value-of.patch
 	patches.kernel.org/6.12.53-234-dm-fix-queue-start-stop-imbalance-under-suspe.patch
 	patches.kernel.org/6.12.53-235-dm-fix-NULL-pointer-dereference-in-__dm_suspe.patch
+	patches.kernel.org/6.12.53-236-LoongArch-Automatically-disable-kaslr-if-boot.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
