--- a/series.conf
+++ b/series.conf
@@ -10847,6 +10847,7 @@
 	patches.kernel.org/6.12.53-124-drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-.patch
 	patches.kernel.org/6.12.53-125-usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.12.53-126-usb-gadget-configfs-Correctly-set-use_os_stri.patch
+	patches.kernel.org/6.12.53-127-tty-n_gsm-Don-t-block-input-queue-by-waiting-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
