--- a/series.conf
+++ b/series.conf
@@ -10962,6 +10962,7 @@
 	patches.kernel.org/6.12.53-239-ksmbd-add-max-ip-connections-parameter.patch
 	patches.kernel.org/6.12.53-240-ext4-fix-checks-for-orphan-inodes.patch
 	patches.kernel.org/6.12.53-241-KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if.patch
+	patches.kernel.org/6.12.53-242-fbdev-simplefb-Fix-use-after-free-in-simplefb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
