thermal/drivers/qcom/lmh: Add missing IRQ includes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10802,6 +10802,7 @@
 	patches.kernel.org/6.12.53-079-once-fix-race-by-moving-DO_ONCE-to-separate-s.patch
 	patches.kernel.org/6.12.53-080-hwmon-mlxreg-fan-Separate-methods-of-fan-sett.patch
 	patches.kernel.org/6.12.53-081-thermal-drivers-qcom-Make-LMH-select-QCOM_SCM.patch
+	patches.kernel.org/6.12.53-082-thermal-drivers-qcom-lmh-Add-missing-IRQ-incl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
