--- a/series.conf
+++ b/series.conf
@@ -10907,6 +10907,7 @@
 	patches.kernel.org/6.12.53-184-coresight-trbe-Return-NULL-pointer-for-alloca.patch
 	patches.kernel.org/6.12.53-185-coresight-tpda-fix-the-logic-to-setup-the-ele.patch
 	patches.kernel.org/6.12.53-186-coresight-Fix-incorrect-handling-for-return-v.patch
+	patches.kernel.org/6.12.53-187-NFSv4.1-fix-backchannel-max_resp_sz-verificat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
