PCI/ACPI: Fix pci_acpi_preserve_config() memory leak (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10826,6 +10826,7 @@
 	patches.kernel.org/6.12.53-103-media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 	patches.kernel.org/6.12.53-104-RDMA-mlx5-Better-estimate-max_qp_wr-to-reflec.patch
 	patches.kernel.org/6.12.53-105-RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-.patch
+	patches.kernel.org/6.12.53-106-PCI-ACPI-Fix-pci_acpi_preserve_config-memory-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
