--- a/series.conf
+++ b/series.conf
@@ -10862,6 +10862,7 @@
 	patches.kernel.org/6.12.53-139-iio-consumers-Fix-offset-handling-in-iio_conv.patch
 	patches.kernel.org/6.12.53-140-netfilter-ipset-Remove-unused-htable_bits-in-.patch
 	patches.kernel.org/6.12.53-141-ipvs-Use-READ_ONCE-WRITE_ONCE-for-ipvs-enable.patch
+	patches.kernel.org/6.12.53-142-watchdog-mpc8xxx_wdt-Reload-the-watchdog-time.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
