ALSA: pcm: Disable bottom softirqs as part of spin_lock_irq() on PREEMPT_RT (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10872,6 +10872,7 @@
 	patches.kernel.org/6.12.53-149-f2fs-fix-to-update-map-m_next_extent-correctl.patch
 	patches.kernel.org/6.12.53-150-f2fs-fix-to-truncate-first-page-in-error-path.patch
 	patches.kernel.org/6.12.53-151-f2fs-fix-to-mitigate-overhead-of-f2fs_zero_po.patch
+	patches.kernel.org/6.12.53-152-ALSA-pcm-Disable-bottom-softirqs-as-part-of-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
