seccomp: Fix a race with WAIT_KILLABLE_RECV if the tracer replies too fast (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10723,6 +10723,7 @@
 	patches.kernel.org/6.12.52-036-Linux-6.12.52.patch
 	patches.kernel.org/6.12.53-001-filelock-add-FL_RECLAIM-to-show_fl_flags-macr.patch
 	patches.kernel.org/6.12.53-002-init-INITRAMFS_PRESERVE_MTIME-should-depend-o.patch
+	patches.kernel.org/6.12.53-003-seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
