--- a/series.conf
+++ b/series.conf
@@ -10954,6 +10954,7 @@
 	patches.kernel.org/6.12.53-231-net-nfc-nci-Add-parameter-validation-for-pack.patch
 	patches.kernel.org/6.12.53-232-mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.kernel.org/6.12.53-233-mfd-vexpress-sysreg-Check-the-return-value-of.patch
+	patches.kernel.org/6.12.53-234-dm-fix-queue-start-stop-imbalance-under-suspe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
