--- a/series.conf
+++ b/series.conf
@@ -10961,6 +10961,7 @@
 	patches.kernel.org/6.12.53-238-ksmbd-fix-error-code-overwriting-in-smb2_get_.patch
 	patches.kernel.org/6.12.53-239-ksmbd-add-max-ip-connections-parameter.patch
 	patches.kernel.org/6.12.53-240-ext4-fix-checks-for-orphan-inodes.patch
+	patches.kernel.org/6.12.53-241-KVM-SVM-Skip-fastpath-emulation-on-VM-Exit-if.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
