Documentation: trace: historgram-design: Separate sched_waking histogram section heading and the following diagram (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10882,6 +10882,7 @@
 	patches.kernel.org/6.12.53-159-Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loo.patch
 	patches.kernel.org/6.12.53-160-RDMA-core-Resolve-MAC-of-next-hop-device-with.patch
 	patches.kernel.org/6.12.53-161-IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
+	patches.kernel.org/6.12.53-162-Documentation-trace-historgram-design-Separat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
