--- a/series.conf
+++ b/series.conf
@@ -10981,6 +10981,7 @@
 	patches.kernel.org/6.12.53-258-usb-typec-tipd-Clear-interrupts-first.patch
 	patches.kernel.org/6.12.53-259-arm64-dts-qcom-qcm2290-Disable-USB-SS-bus-ins.patch
 	patches.kernel.org/6.12.53-260-usb-cdns3-cdnsp-pci-remove-redundant-pci_disa.patch
+	patches.kernel.org/6.12.53-261-Linux-6.12.53.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
