--- a/series.conf
+++ b/series.conf
@@ -10754,6 +10754,7 @@
 	patches.kernel.org/6.12.53-031-pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.kernel.org/6.12.53-032-blk-mq-check-kobject-state_in_sysfs-before-de.patch
 	patches.kernel.org/6.12.53-033-ARM-at91-pm-fix-MCKx-restore-routine.patch
+	patches.kernel.org/6.12.53-034-arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
