drm/amd/pm: Treat zero vblank time as too short in si_dpm (v3) (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10838,6 +10838,7 @@
 	patches.kernel.org/6.12.53-115-drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 	patches.kernel.org/6.12.53-116-drm-amd-pm-Fix-si_upload_smc_data-v3.patch
 	patches.kernel.org/6.12.53-117-drm-amd-pm-Adjust-si_upload_smc_data-register.patch
+	patches.kernel.org/6.12.53-118-drm-amd-pm-Treat-zero-vblank-time-as-too-shor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
