--- a/series.conf
+++ b/series.conf
@@ -10969,6 +10969,7 @@
 	patches.kernel.org/6.12.53-246-misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 	patches.kernel.org/6.12.53-247-misc-fastrpc-fix-possible-map-leak-in-fastrpc.patch
 	patches.kernel.org/6.12.53-248-misc-fastrpc-Skip-reference-for-DMA-handles.patch
+	patches.kernel.org/6.12.53-249-Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
