uprobes: uprobe_warn should use passed task (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10728,6 +10728,7 @@
 	patches.kernel.org/6.12.53-005-gfs2-Fix-GLF_INVALIDATE_IN_PROGRESS-flag-clea.patch
 	patches.kernel.org/6.12.53-006-powerpc-8xx-Remove-left-over-instruction-and-.patch
 	patches.kernel.org/6.12.53-007-powerpc-603-Really-copy-kernel-PGD-entries-in.patch
+	patches.kernel.org/6.12.53-008-uprobes-uprobe_warn-should-use-passed-task.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
