--- a/series.conf
+++ b/series.conf
@@ -10873,6 +10873,7 @@
 	patches.kernel.org/6.12.53-150-f2fs-fix-to-truncate-first-page-in-error-path.patch
 	patches.kernel.org/6.12.53-151-f2fs-fix-to-mitigate-overhead-of-f2fs_zero_po.patch
 	patches.kernel.org/6.12.53-152-ALSA-pcm-Disable-bottom-softirqs-as-part-of-s.patch
+	patches.kernel.org/6.12.53-153-ACPI-NFIT-Fix-incorrect-ndr_desc-being-report.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
