--- a/series.conf
+++ b/series.conf
@@ -10896,6 +10896,7 @@
 	patches.kernel.org/6.12.53-173-vfio-pds-replace-bitmap_free-with-vfree.patch
 	patches.kernel.org/6.12.53-174-crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_d.patch
 	patches.kernel.org/6.12.53-175-RDMA-rxe-Fix-race-in-do_task-when-draining.patch
+	patches.kernel.org/6.12.53-176-wifi-rtw89-avoid-circular-locking-dependency-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
