misc: fastrpc: Fix fastrpc_map_lookup operation (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10966,6 +10966,7 @@
 	patches.kernel.org/6.12.53-243-mm-hugetlb-avoid-soft-lockup-when-mprotect-to.patch
 	patches.kernel.org/6.12.53-244-nvdimm-ndtest-Return-ENOMEM-if-devm_kcalloc-f.patch
 	patches.kernel.org/6.12.53-245-misc-fastrpc-Save-actual-DMA-size-in-fastrpc_.patch
+	patches.kernel.org/6.12.53-246-misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
