crypto: hisilicon/zip - remove unnecessary validation for high-performance mode configurations (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10829,6 +10829,7 @@
 	patches.kernel.org/6.12.53-106-PCI-ACPI-Fix-pci_acpi_preserve_config-memory-.patch
 	patches.kernel.org/6.12.53-107-ALSA-lx_core-use-int-type-to-store-negative-e.patch
 	patches.kernel.org/6.12.53-108-media-st-delta-avoid-excessive-stack-usage.patch
+	patches.kernel.org/6.12.53-109-crypto-hisilicon-zip-remove-unnecessary-valid.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
