--- a/series.conf
+++ b/series.conf
@@ -10898,6 +10898,7 @@
 	patches.kernel.org/6.12.53-175-RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 	patches.kernel.org/6.12.53-176-wifi-rtw89-avoid-circular-locking-dependency-.patch
 	patches.kernel.org/6.12.53-177-PCI-tegra194-Fix-duplicate-PLL-disable-in-pex.patch
+	patches.kernel.org/6.12.53-178-remoteproc-qcom-q6v5-Avoid-disabling-handover.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
