--- a/series.conf
+++ b/series.conf
@@ -10798,6 +10798,7 @@
 	patches.kernel.org/6.12.53-075-smp-Fix-up-and-expand-the-smp_call_function_m.patch
 	patches.kernel.org/6.12.53-076-tools-nolibc-make-time_t-robust-if-__kernel_o.patch
 	patches.kernel.org/6.12.53-077-spi-fix-return-code-when-spi-device-has-too-m.patch
+	patches.kernel.org/6.12.53-078-bpf-Mark-kfuncs-as-__noclone.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
