Bluetooth: ISO: don't leak skb in ISO_CONT RX (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10923,6 +10923,7 @@
 	patches.kernel.org/6.12.53-200-Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on.patch
 	patches.kernel.org/6.12.53-201-Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_fr.patch
 	patches.kernel.org/6.12.53-202-Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
+	patches.kernel.org/6.12.53-203-Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
