--- a/series.conf
+++ b/series.conf
@@ -10948,6 +10948,7 @@
 	patches.kernel.org/6.12.53-225-io_uring-waitid-always-prune-wait-queue-entry.patch
 	patches.kernel.org/6.12.53-226-ASoC-wcd934x-fix-error-handling-in-wcd934x_co.patch
 	patches.kernel.org/6.12.53-227-ASoC-SOF-ipc3-topology-Fix-multi-core-and-sta.patch
+	patches.kernel.org/6.12.53-228-ASoC-codecs-wcd937x-set-the-comp-soundwire-po.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
