wifi: iwlwifi: config: unify fw/pnvm MODULE_FIRMWARE (bsc#1252084).

--- a/series.conf
+++ b/series.conf
@@ -4472,6 +4472,7 @@
 	patches.suse/wifi-iwlwifi-mvm-don-t-count-mgmt-frames-as-MPDU.patch
 	patches.suse/wifi-mac80211-prohibit-deactivating-all-links.patch
 	patches.suse/wifi-cfg80211-Move-cfg80211_scan_req_add_chan-n_chan.patch
+	patches.suse/wifi-iwlwifi-config-unify-fw-pnvm-MODULE_FIRMWARE.patch
 	patches.suse/wifi-mac80211-fix-tid-removal-during-mesh-forwarding.patch
 	patches.suse/wifi-mac80211-Fix-common-size-calculation-for-ML-ele.patch
 	patches.suse/wifi-mac80211-Support-parsing-EPCS-ML-element.patch
