--- a/series.conf
+++ b/series.conf
@@ -12515,6 +12515,7 @@
 	patches.suse/powerpc-kexec_file-Add-KEXEC_SIG-support.patch
 +hare	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
 	patches.suse/wifi-ath12k-Add-MODULE_FIRMWARE-entries.patch
+	patches.suse/wifi-iwlwifi-Add-missing-firmware-info-for-bz-b0-mod.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
