wifi: iwlwifi: Add missing firmware info for bz-b0-* models (bsc#1252084).

--- a/series.conf
+++ b/series.conf
@@ -692,6 +692,7 @@
 	patches.suse/Revert-net-bonding-send-peer-notify-when-failure-rec.patch
 	patches.suse/Revert-net-bonding-add-broadcast_neighbor-netlink-op.patch
 	patches.suse/Revert-net-bonding-add-broadcast_neighbor-option-for.patch
+	patches.suse/wifi-iwlwifi-Add-missing-firmware-info-for-bz-b0-mod.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
