wifi: iwlwifi: Add missing firmware info for bz-b0-* models (bsc#1252084).

--- a/series.conf
+++ b/series.conf
@@ -76,6 +76,7 @@
 	# to area specific sections below.
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
+	patches.suse/wifi-iwlwifi-Add-missing-firmware-info-for-bz-b0-mod.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
