iommu/vt-d: Disallow dirty tracking if incoherent page walk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34518,6 +34518,7 @@
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/iommu-vt-d-PRS-isn-t-usable-if-PDS-isn-t-supported.patch
+	patches.suse/iommu-vt-d-Disallow-dirty-tracking-if-incoherent-pag.patch
 	patches.suse/RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect-WQE-c.patch
 	patches.suse/RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-device.patch
 	patches.suse/RDMA-cm-Rate-limit-destroy-CM-ID-timeout-error-messa.patch
