--- a/series.conf
+++ b/series.conf
@@ -12542,6 +12542,7 @@
 	patches.suse/drm-amd-Check-whether-secure-display-TA-loaded-succe.patch
 	patches.suse/drm-amdgpu-Report-individual-reset-error.patch
 	patches.suse/drm-amd-display-Enable-Dynamic-DTBCLK-Switch.patch
+	patches.suse/bpf-Fix-metadata_dst-leak-__bpf_redirect_neigh_v-4-6.patch
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
