--- a/series.conf
+++ b/series.conf
@@ -34638,6 +34638,7 @@
 	patches.suse/drm-amd-display-Properly-disable-scaling-on-DCE6.patch
 	patches.suse/drm-amd-display-Disable-scaling-on-DCE6-for-now.patch
 	patches.suse/bpf-Fix-metadata_dst-leak-__bpf_redirect_neigh_v-4-6.patch
+	patches.suse/bpf-Avoid-RCU-context-warning-when-unpinning-htab-wi.patch
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
