selftests/bpf: Fix error compiling bpf_iter_setsockopt.c with musl libc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28319,6 +28319,7 @@
 	patches.suse/selftests-bpf-Workaround-strict-bpf_lsm-return-value.patch
 	patches.suse/bpf-Fail-verification-for-sign-extension-of-packet-d.patch
 	patches.suse/selftests-bpf-Add-tests-for-ldsx-of-pkt-data-data_en.patch
+	patches.suse/selftests-bpf-Fix-error-compiling-bpf_iter_setsockop.patch
 	patches.suse/samples-bpf-Fix-compilation-errors-with-cf-protectio.patch
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
 	patches.suse/selftests-bpf-test-for-malformed-BPF_CORE_TYPE_ID_LO.patch
