selftests/bpf: Fix compiling kfree_skb.c with musl-libc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28321,6 +28321,7 @@
 	patches.suse/selftests-bpf-Add-tests-for-ldsx-of-pkt-data-data_en.patch
 	patches.suse/selftests-bpf-Fix-error-compiling-bpf_iter_setsockop.patch
 	patches.suse/selftests-bpf-Fix-compiling-parse_tcp_hdr_opt.c-with.patch
+	patches.suse/selftests-bpf-Fix-compiling-kfree_skb.c-with-musl-li.patch
 	patches.suse/samples-bpf-Fix-compilation-errors-with-cf-protectio.patch
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
 	patches.suse/selftests-bpf-test-for-malformed-BPF_CORE_TYPE_ID_LO.patch
