selftests/bpf: Fix compiling tcp_rtt.c with musl-libc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28323,6 +28323,7 @@
 	patches.suse/selftests-bpf-Fix-compiling-parse_tcp_hdr_opt.c-with.patch
 	patches.suse/selftests-bpf-Fix-compiling-kfree_skb.c-with-musl-li.patch
 	patches.suse/selftests-bpf-Fix-compiling-flow_dissector.c-with-mu.patch
+	patches.suse/selftests-bpf-Fix-compiling-tcp_rtt.c-with-musl-libc.patch
 	patches.suse/samples-bpf-Fix-compilation-errors-with-cf-protectio.patch
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
 	patches.suse/selftests-bpf-test-for-malformed-BPF_CORE_TYPE_ID_LO.patch
